--- a/templates/create.html
+++ b/templates/create.html
@@ -1,29 +1,58 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
+    <script src="/assets/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <script src="/assets/notify.js" type="text/javascript"></script>
 </head>
 <body>
-
 <h1>Create new Mock</h1>
 
-<form method="post" action="/create">
-    <label for="key">Name for this Mock</label>
+<form>
+    <label for="txtKey">Key</label>
 
     <br>
-    <input id="key" name="key" type="text" placeholder="Your custom name for this mock (optional)"
-    style="width: 500px;">
+    <input id="txtKey" type="text" placeholder="Your custom name for this mock (optional)"
+           style="width: 500px;" autofocus>
 
     <br>
-    <label for="content">Mock Data</label>
+    <label for="txtContent">Content</label>
 
     <br>
-    <textarea id="content" name="content" style="width: 500px;" rows="40"></textarea>
+    <textarea id="txtContent" style="width: 500px;" rows="40"></textarea>
 
     <br>
-    <button type="submit">Save</button>
+    <button id="btnSubmit" type="button">Save</button>
 </form>
 
 <a href="/">Cancel</a>
 
+<script>
+    $(function () {
+        var txtKey = $("#txtKey");
+        var txtContent = $("#txtContent");
+
+        $("#btnSubmit").on("click", function () {
+            $.ajax({
+                type: "POST",
+                url: '/api/mock',
+                data: JSON.stringify({
+                    "Key": txtKey.val(),
+                    "Content": txtContent.val()
+                }),
+                success: function (data) {
+                    const result = JSON.parse(data);
+                    $.notify(`Mock '${result.Key}' saved.`, "success");
+
+                    txtKey.val("");
+                    txtContent.val("");
+                    txtKey.focus();
+                },
+                error: function (errMsg) {
+                    $.notify(`Error saving mock.\r\n${errMsg.responseText}`, "error");
+                }
+            })
+        });
+    });
+</script>
 </body>
 </html>
