Add function to receive and display all mocks from database

--- a/templates/create.html
+++ b/templates/create.html
@@ -37,7 +37,7 @@
 
         if (!!key) {
             $.ajax({
-                url: `/api/mock/${key}`,
+                url: `/api/mock/key/${key}`,
                 success: function (data) {
                     saveMethod = "PUT";
                     let jObject = JSON.parse(data);
