--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,13 @@
 
 <p>This website is used to create and serve Mock-Data via REST</p>
 
-<a href="/create">Create new data</a>
+<p>
+    <a href="/create">Create new data</a>
+</p>
+
+<p>
+    <a href="/showall">Show all Mocks</a>
+</p>
 
 </body>
 </html>
