--- a/templates/showAll.html
+++ b/templates/showAll.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <script src="/assets/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <script src="/assets/notify.js" type="text/javascript"></script>
 </head>
 <body>
 <h1>Show all Mocks</h1>
@@ -13,8 +14,7 @@
     <tr>
         <th>Key</th>
         <th>Content</th>
-        <th></th>
-        <th></th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody id="tableContent">
@@ -33,21 +33,47 @@
         for (let index = 0; index < mocks.length; index++) {
             var item = mocks[index];
 
+            var key = item.Key;
             var content = item.Content.substring(0, 20);
+            var rowContent = `
+                            <tr id=\"row_${key}\">
+                                <td>
+                                    <a href=\"/create?key=${key}\">${key}</a>
+                                </td>
+                                <td>${content}</td>
+                                <td>
+                                    <a href=\"/raw/${key}\">Raw</a> ---
+                                    <input type=\"button\" onclick=\"deleteMock(\'${key}\')\" value=\"Delete\">
+                                </td>
+                            </tr>`;
 
-            var content = `
-                    <tr>
-                        <td>${item.Key}</td>
-                        <td>${content}</td>
-                        <td><a href=\'/create?key=${item.Key}\'>Edit</a></td>
-                        <td><a href=\'/raw/${item.Key}\'>Raw</a></td>
-                    </tr>`;
-
-            rows[index] = content;
+            rows[index] = rowContent;
         }
 
         var complete = rows.join();
         tableContent.html(complete);
+    }
+
+    function deleteMock(key) {
+        var shouldBeDeleted = confirm(`do you want to delete: ${key}`)
+        if (shouldBeDeleted === false) {
+            return;
+        }
+
+        $.ajax({
+            type: "DELETE",
+            url: `/api/mock/key/${key}`,
+            success: function () {
+                $.notify(`Mock '${key}' has been deleted.`, "success");
+
+                var rowId = `#row_${key}`;
+                $(rowId).remove();
+            },
+            error: function (errMsg) {
+                $.notify(`Error deleting Mock.\r\n${errMsg.responseText}`, "error");
+            }
+        });
+
     }
 
     $(function () {
@@ -62,7 +88,7 @@
             error: function (errMsg) {
                 $.notify(`Error reading all mocks.\r\n${errMsg.responseText}`, "error");
             }
-        })
+        });
     });
 </script>
 </body>
