--- a/templates/create.html
+++ b/templates/create.html
@@ -1,84 +1,53 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="/assets/bootstrap-4.5.2.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <script src="/assets/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="/assets/notify.js" type="text/javascript"></script>
+    <script src="/assets/createScripts.js" type="text/javascript"></script>
 </head>
 <body>
-<h1>Create new Mock</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Home</a>
 
-<form>
-    <label for="txtKey">Key</label>
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="/create">Create Mock</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/showall">Show all</a>
+        </li>
+    </ul>
 
-    <br>
-    <input id="txtKey" type="text" placeholder="Your custom name for this mock (optional)"
-           style="width: 500px;" autofocus>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="https://github.com/mbedded/MockRestServer" target="_blank">Project on Github</a>
+        </li>
+    </ul>
+</nav>
+<div class="container-fluid">
+    <h1>Create new Mock</h1>
 
-    <br>
-    <label for="txtContent">Content</label>
+    <form>
+        <label for="txtKey">Key</label>
 
-    <br>
-    <textarea id="txtContent" style="width: 500px;" rows="40"></textarea>
+        <br>
+        <input id="txtKey" type="text" placeholder="Your custom name for this mock (optional)"
+               style="width: 500px;" autofocus>
 
-    <br>
-    <button id="btnSubmit" type="button">Save</button>
-</form>
+        <br>
+        <label for="txtContent">Content</label>
 
-<a href="/">Cancel</a>
+        <br>
+        <textarea id="txtContent" style="width: 500px;" rows="40"></textarea>
+
+        <br>
+        <button id="btnSubmit" type="button">Save</button>
+    </form>
+</div>
 
 <script>
-    $(function () {
-        let txtKey = $("#txtKey");
-        let txtContent = $("#txtContent");
-        let saveMethod = "POST";
 
-        let searchParams = new URLSearchParams(window.location.search);
-        let key = searchParams.get('key');
-
-        if (!!key) {
-            $.ajax({
-                url: `/api/mock/key/${key}`,
-                success: function (data) {
-                    saveMethod = "PUT";
-                    let jObject = JSON.parse(data);
-
-                    txtKey.val(jObject.Key);
-                    txtKey.prop('disabled', true);
-
-                    txtContent.val(jObject.Content);
-                },
-                error: function (errMsg) {
-                    $.notify(`Mock with Key ${key} is not existing but you can create it now.`, "error");
-                    txtKey.val(key);
-                    txtContent.focus();
-                }
-            });
-        }
-
-        $("#btnSubmit").on("click", function () {
-            $.ajax({
-                type: saveMethod,
-                url: '/api/mock',
-                data: JSON.stringify({
-                    "Key": txtKey.val(),
-                    "Content": txtContent.val()
-                }),
-                success: function (data) {
-                    const result = JSON.parse(data);
-                    $.notify(`Mock '${result.Key}' saved.`, "success");
-
-                    if (saveMethod === "POST") {
-                        txtKey.val("");
-                        txtContent.val("");
-                        txtKey.focus();
-                    }
-                },
-                error: function (errMsg) {
-                    $.notify(`Error saving mock.\r\n${errMsg.responseText}`, "error");
-                }
-            })
-        });
-    });
 </script>
 </body>
 </html>
