--- a/templates/showAll.html
+++ b/templates/showAll.html
@@ -1,95 +1,49 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="/assets/bootstrap-4.5.2.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <script src="/assets/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="/assets/notify.js" type="text/javascript"></script>
+    <script src="/assets/showAllScripts.js" type="text/javascript"></script>
 </head>
 <body>
-<h1>Show all Mocks</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Home</a>
 
-<p>Here you see all your mocks you have created.</p>
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="/create">Create Mock</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/showall">Show all</a>
+        </li>
+    </ul>
 
-<table>
-    <thead>
-    <tr>
-        <th>Key</th>
-        <th>Content</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="https://github.com/mbedded/MockRestServer" target="_blank">Project on Github</a>
+        </li>
+    </ul>
+</nav>
+<div class="container-fluid">
+    <h1>Show all Mocks</h1>
 
-    <tbody id="tableContent"></tbody>
-</table>
+    <p>Here you see all your mocks you have created.</p>
 
-<p>
-    <a href="/">Back to home</a>
-</p>
+    <table>
+        <thead>
+        <tr>
+            <th>Key</th>
+            <th>Content</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+
+        <tbody id="tableContent"></tbody>
+    </table>
+</div>
 <script>
-    var tableContent = $("#tableContent");
 
-    function createTable(mocks) {
-        var rows = [mocks.length];
-
-        for (let index = 0; index < mocks.length; index++) {
-            var item = mocks[index];
-
-            var key = item.Key;
-            var content = item.Content.substring(0, 20);
-            var rowContent = `
-                            <tr id=\"row_${key}\">
-                                <td>
-                                    <a href=\"/create?key=${key}\">${key}</a>
-                                </td>
-                                <td>${content}</td>
-                                <td>
-                                    <a href=\"/raw/${key}\">Raw</a> ---
-                                    <input type=\"button\" onclick=\"deleteMock(\'${key}\')\" value=\"Delete\">
-                                </td>
-                            </tr>`;
-
-            rows[index] = rowContent;
-        }
-
-        var complete = rows.join();
-        tableContent.html(complete);
-    }
-
-    function deleteMock(key) {
-        var shouldBeDeleted = confirm(`Do you want to delete: ${key}`)
-        if (shouldBeDeleted === false) {
-            return;
-        }
-
-        $.ajax({
-            type: "DELETE",
-            url: `/api/mock/key/${key}`,
-            success: function () {
-                $.notify(`Mock '${key}' has been deleted.`, "success");
-
-                var rowId = `#row_${key}`;
-                $(rowId).remove();
-            },
-            error: function (errMsg) {
-                $.notify(`Error deleting Mock.\r\n${errMsg.responseText}`, "error");
-            }
-        });
-
-    }
-
-    $(function () {
-        $.ajax({
-            type: "GET",
-            url: '/api/mock/all',
-            success: function (data) {
-                const result = JSON.parse(data);
-
-                createTable(result);
-            },
-            error: function (errMsg) {
-                $.notify(`Error reading all mocks.\r\n${errMsg.responseText}`, "error");
-            }
-        });
-    });
 </script>
 </body>
 </html>
