--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,13 @@
 </nav>
 
 <div class="container-fluid">
-    <h1>JMock API</h1>
+    <div class="row">
+        <div class="col">
+            <h1>JMock API</h1>
 
-    <p>This website is used to create and serve Mock-Data via REST</p>
-
+            <p>This website is used to create and serve Mock-Data via REST</p>
+        </div>
+    </div>
 </div>
 
 </body>
