--- a/templates/showAll.html
+++ b/templates/showAll.html
@@ -26,24 +26,29 @@
     </ul>
 </nav>
 <div class="container-fluid">
-    <h1>Show all Mocks</h1>
+    <div class="row">
+        <div class="col">
+            <h1>Show all Mocks</h1>
 
-    <p>Here you see all your mocks you have created.</p>
+            <p>Here you see all your mocks you have created.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <table>
+                <thead>
+                <tr>
+                    <th>Key</th>
+                    <th>Content</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
 
-    <table>
-        <thead>
-        <tr>
-            <th>Key</th>
-            <th>Content</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
+                <tbody id="tableContent"></tbody>
+            </table>
+        </div>
+    </div>
 
-        <tbody id="tableContent"></tbody>
-    </table>
 </div>
-<script>
-
-</script>
 </body>
 </html>
