Adjustments of "show all" page. Change index-header to name of project in github

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-            <h1>JMock API</h1>
-
-            <p>This website is used to create and serve Mock-Data via REST</p>
+            <h1>MockRestServer</h1>
+            <p>This service is used to create and serve Mock-Data via REST</p>
         </div>
     </div>
 </div>
