--- a/templates/showAll.html
+++ b/templates/showAll.html
@@ -33,17 +33,17 @@
             <p>Here you see all your mocks you have created.</p>
         </div>
     </div>
+
     <div class="row">
         <div class="col">
-            <table>
+            <table class="table table-striped table-sm">
                 <thead>
                 <tr>
-                    <th>Key</th>
-                    <th>Content</th>
-                    <th>Actions</th>
+                    <th scope="col">Key</th>
+                    <th scope="col">Content</th>
+                    <th scope="col">Actions</th>
                 </tr>
                 </thead>
-
                 <tbody id="tableContent"></tbody>
             </table>
         </div>
