Adjust "reset button" for "create/update mock"

--- a/templates/create.html
+++ b/templates/create.html
@@ -47,7 +47,7 @@
         </div>
 
         <button id="btnSubmit" class="btn btn-primary mr-5" type="button">Create Mock</button>
-        <button class="btn btn-light" type="reset">Reset form</button>
+        <button id="btnReset" class="btn btn-light" type="button">Reset form</button>
     </form>
 
 </div>
