--- a/templates/create.html
+++ b/templates/create.html
@@ -28,7 +28,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-            <h1>Create new Mock</h1>
+            <h1 id="headerPage">Create new Mock</h1>
         </div>
     </div>
     <form>
@@ -49,7 +49,6 @@
         <button id="btnSubmit" class="btn btn-primary mr-5" type="button">Create Mock</button>
         <button id="btnReset" class="btn btn-light" type="button">Reset form</button>
     </form>
-
 </div>
 </body>
 </html>
